--- a/petandpeople/diagnosis/templates/diagnosis/diagnosis_plan_kor.html
+++ b/petandpeople/diagnosis/templates/diagnosis/diagnosis_plan_kor.html
@@ -68,7 +68,7 @@
     $(document).ready(function () {
         var s = '이벤트 접수가 완료되었습니다.\n이메일을 통해 배송 및 유의사항을 안내해드리겠습니다!\n참여해주셔서 감사드립니다❤';
         alert(s);
-        window.location="{% url 'diagnosis:main_lang' 'eng' %}";
+        window.location="{% url 'diagnosis:main_lang' 'kor' %}";
     })
 </script>
 {% endblock %}
