--- a/petandpeople/diagnosis/templates/diagnosis/diagnosis_me_kor.html
+++ b/petandpeople/diagnosis/templates/diagnosis/diagnosis_me_kor.html
@@ -26,9 +26,9 @@
             </label>
         </div>
         <div class="userInfoBox">
-            <label for="petsCount">강아지를
+            <label for="petsCount">강아지
                 <input class="InlineInput" id="petsCount" type="number" name="pet_num" placeholder="0" autocomplete="false" min="0" value="" required>
-                마리 키우고 있습니다
+                마리와 함께 살고있습니다
             </label>
         </div>
         <div class="userInfoBox fadeInputBox">
@@ -36,19 +36,14 @@
         </div>
 
         <div class="userInfoBox">
-            <label for="zip">그리고 저희는
+            <label for="zip">그리고 저희가 사는 곳은
                 <input class="InlineInput" id="zip" type="number" name="zip" autocomplete="false" min="0" max="99999" placeholder="우편번호" required>
-
             </label>
-        </div>
-
-        <div class="userInfoBox">
             <label for="address">
                 <input class="InlineInput" id="address" type="text" name="address" autocomplete="false" placeholder="세부 주소" required>
-                에 살고 있어요
+                입니다
             </label>
         </div>
-
         <div class="userInfoBox">
             <label for="spendingTime">저희는 하루에 보통
                 <input class="InlineInput" id="spendingTime" type="number" name="spending_time" placeholder="0" autocomplete="false" min="0" max="24" required>
