--- a/petandpeople/diagnosis/templates/diagnosis/diagnosis_pet_kor.html
+++ b/petandpeople/diagnosis/templates/diagnosis/diagnosis_pet_kor.html
@@ -43,10 +43,10 @@
                 <span>이에요</span>
            </div>
             <div class="petInfoBox petSpayedBox container-fluid ">
-                <span>그</span> 중성화를
+                <span>그는</span> 중성화를
                 <select name="spayed" class="petSpayed" value="{{ pet_profile.spayed }}">
                     <option value="yes">했어요</option>
-                    <option value="no">안했어</option>
+                    <option value="no">안했어요</option>
                 </select>
                 <span>그리고 체중은</span>
                 <input class="inlineInput petWeight" type="number" name="weight" placeholder="0" autocomplete="false" min="1" max="99" value="{{ pet_profile.weight }}" required>
