--- a/petandpeople/diagnosis/templates/diagnosis/diagnosis_pet_kor.html
+++ b/petandpeople/diagnosis/templates/diagnosis/diagnosis_pet_kor.html
@@ -63,7 +63,7 @@
                     <option value="big">대형</option>
                 </select>
                 견으로 견종은
-                <input class="inlineInput petBreed" type="text" name="breed" autocopmlete="True" placeholder="견" value="{{ pet_profile.breed }}" required>
+                <input class="inlineInput petBreed" type="text" name="breed" autocopmlete="True" placeholder="견종" value="{{ pet_profile.breed }}" required>
                 입니다
             </div>
             <div class="petInfoBox petBodyTypeBox container-fluid ">
@@ -173,7 +173,7 @@
                     <option value="dry">건식</option>
                     <option value="wet">습식</option>
                     <option value="faw">생식</option>
-                    <option value="dehydrated">탈수분 사료</option>
+                    <option value="dehydrated">동결건조 사료</option>
                     <option value="fresh">자연식</option>
                     <option value="homemade">핸드메이드</option>
                 </select>
