--- a/petandpeople/diagnosis/templates/diagnosis/diagnosis_plan.html
+++ b/petandpeople/diagnosis/templates/diagnosis/diagnosis_plan.html
@@ -12,52 +12,112 @@
 
 <div class="col-md-offset-2 col-md-8">
     {% for pet in pet_profile_li %}
-    <div class="container-fluid diagnosisCard">
-        <p>{{ pet.0 }}</p>
-        <div class="col-md-8">
-            <p>For Well-Balanced</p>
+    <div class="col-md-offset-3 col-md-6 diagnosisCard">
+        <div class="planTitleBox container-fluid">
+            <p>{{ pet.0 }}'s Care Point</p>
+        </div>
+        <div class="carePointBox container-fluid">
             {% if 'fat' in pet.1 %}
-            <p>fat</p>
+            <div class="carePoint col-md-3">
 
+                <div class="carePointImg">
+                    <img src="{% static 'img/obesity.png' %}" alt="">
+                </div>
+                <p>Obesity</p>
+
+
+            </div>
             {% endif %}
-
-            <p>Care Point</p>
             {% if 'toothache' in pet.1 %}
-            <span>toothache</span>
+            <div class="carePoint col-md-3">
 
+                <div class="carePointImg">
+                    <img src="{% static 'img/tooth.png' %}" alt="">
+                </div>
+                <p>Tooth</p>
+
+
+            </div>
             {% endif %}
-
             {% if 'skin disease' in pet.1 %}
-            <span>skin disease</span>
+            <div class="carePoint col-md-3">
+                <div class="carePointImg">
+                    <img src="{% static 'img/skin.png' %}" alt="">
+                </div>
+                <p>Skin</p>
 
+            </div>
             {% endif %}
-
             {% if 'joint' in pet.1 %}
-            <span>joint</span>
+            <div class="carePoint col-md-3">
 
+                <div class="carePointImg">
+                    <img src="{% static 'img/skin.png' %}" alt="">
+                </div>
+                <p>Joint</p>
+            </div>
             {% endif %}
 
             {% if pet.3 == 1 %}
-            <span>allergies</span>
-
+            <div class="carePoint col-md-3">
+                <div class="carePointImg">
+                    <img src="{% static 'img/allergies.png' %}" alt="">
+                </div>
+                <p>allergies</p>
+            </div>
             {% endif %}
 
-            <p>Proper Serving: {{ pet.2 }}g</p>
-
-
-
         </div>
-        <div class="col-md-offset-1 col-md-3 diagnosis_">
-            <p>Result of diagnosis</p>
-            <div>
+
+        <div class="dietPlanBox container-fluid">
+            <p class="dietPlanTitle">{{ pet.0 }}'s Well-Balanced Diet</p>
+            <div class="dietPlan container">
+                <strong><span>Beef</span></strong><br><br>
+
+                <span>Sweet Potato</span><br>
+                <span>Cow liver</span><br>
+                <span>Carrot</span><br>
+                <span>Pea</span><br>
+                <span>Cow heart</span><br>
+                <span>Kelp</span><br>
+                <span>Banana</span><br>
+                <span>Kale</span><br>
+                <span>Sunflower oil</span><br>
+                <span>Salmon oil</span><br>
+                <span>Flaxseed oil</span><br>
             </div>
-            <button>Go to custom</button>
+            <div class="dietPlan container">
+                <strong><span>chicken breast</span></strong><br><br>
+
+                <span>Sweet Potato</span><br>
+                <span>Chicken liver</span><br>
+                <span>Chicken proximal</span><br>
+                <span>Carrot</span><br>
+                <span>Pea</span><br>
+                <span>Kelp</span><br>
+                <span>Apple</span><br>
+                <span>Spinach</span><br>
+                <span>Sunflower oil</span><br>
+                <span>Salmon oil</span><br>
+                <span>Falxseed oil</span><br>
+            </div>
         </div>
+        <p>Profit serving per: {{ pet.2 }}kcal</p>
+
+        <div class="diagnosisResultBox container-fluid">
+            <div class="diagnosisResultTitle">
+                <p>More nutrients requirement for {{ pet.0 }}</p>
+            </div>
+            <div class="diagnosisResult">
+                <button class="btn btn-default diagnosisCardButton">More</button>
+            </div>
+        </div>
+
     </div>
     {% endfor %}
 </div>
 
-
+<!--<div>Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>-->
 
 {% endblock %}
 
@@ -65,10 +125,10 @@
 
 {% block script %}
 <script>
-    $(document).ready(function () {
-        var s = '이벤트 접수가 완료되었습니다.\n이메일을 통해 배송 및 유의사항을 안내해드리겠습니다!\n참여해주셔서 감사드립니다❤';
-        alert(s);
-        window.location="{% url 'diagnosis:main_lang' 'eng' %}";
-    })
+//    $(document).ready(function () {
+//        var s = '이벤트 접수가 완료되었습니다.\n이메일을 통해 배송 및 유의사항을 안내해드리겠습니다!\n참여해주셔서 감사드립니다❤';
+//        alert(s);
+//        window.location="{% url 'diagnosis:main_lang' 'kor' %}";
+//    })
 </script>
 {% endblock %}
