--- a/petandpeople/diagnosis/templates/diagnosis/diagnosis_plan_kor.html
+++ b/petandpeople/diagnosis/templates/diagnosis/diagnosis_plan_kor.html
@@ -12,52 +12,112 @@
 
 <div class="col-md-offset-2 col-md-8">
     {% for pet in pet_profile_li %}
-    <div class="container-fluid diagnosisCard">
-        <p>{{ pet.0 }}</p>
-        <div class="col-md-8">
-            <p>For Well-Balanced</p>
+    <div class="col-md-offset-3 col-md-6 diagnosisCard">
+        <div class="planTitleBox container-fluid">
+            <p>{{ pet.0 }}의 케어 포인트</p>
+        </div>
+        <div class="carePointBox container-fluid">
             {% if 'fat' in pet.1 %}
-            <p>fat</p>
+            <div class="carePoint col-md-3">
 
+                <div class="carePointImg">
+                    <img src="{% static 'img/obesity.png' %}" alt="">
+                </div>
+                <p>비만</p>
+
+
+            </div>
             {% endif %}
-
-            <p>Care Point</p>
             {% if 'toothache' in pet.1 %}
-            <span>toothache</span>
+            <div class="carePoint col-md-3">
 
+                <div class="carePointImg">
+                    <img src="{% static 'img/tooth.png' %}" alt="">
+                </div>
+                <p>치아</p>
+
+
+            </div>
             {% endif %}
-
             {% if 'skin disease' in pet.1 %}
-            <span>skin disease</span>
+            <div class="carePoint col-md-3">
+                <div class="carePointImg">
+                    <img src="{% static 'img/skin.png' %}" alt="">
+                </div>
+                <p>피부</p>
 
+            </div>
             {% endif %}
-
             {% if 'joint' in pet.1 %}
-            <span>joint</span>
+            <div class="carePoint col-md-3">
 
+                <div class="carePointImg">
+                    <img src="{% static 'img/skin.png' %}" alt="">
+                </div>
+                <p>관절</p>
+            </div>
             {% endif %}
 
             {% if pet.3 == 1 %}
-            <span>allergies</span>
-
+            <div class="carePoint col-md-3">
+                <div class="carePointImg">
+                    <img src="{% static 'img/allergies.png' %}" alt="">
+                </div>
+                <p>알레르기</p>
+            </div>
             {% endif %}
 
-            <p>Proper Serving: {{ pet.2 }}g</p>
-
-
-
         </div>
-        <div class="col-md-offset-1 col-md-3 diagnosis_">
-            <p>Result of diagnosis</p>
-            <div>
+
+        <div class="dietPlanBox container-fluid">
+            <p class="dietPlanTitle">{{ pet.0 }}를 위한 균형 식단</p>
+            <div class="dietPlan container">
+                <strong><span>소고기</span></strong><br><br>
+
+                <span>고구마</span><br>
+                <span>소간</span><br>
+                <span>당근</span><br>
+                <span>완두콩</span><br>
+                <span>소 염통</span><br>
+                <span>다시마</span><br>
+                <span>바나나</span><br>
+                <span>케일</span><br>
+                <span>해바라기유</span><br>
+                <span>연어오일</span><br>
+                <span>아마씨유</span><br>
             </div>
-            <button>Go to custom</button>
+            <div class="dietPlan container">
+                <strong><span>닭 가슴살</span></strong><br><br>
+
+                <span>고구마</span><br>
+                <span>닭 간</span><br>
+                <span>닭 모래집</span><br>
+                <span>당근</span><br>
+                <span>완두콩</span><br>
+                <span>다시마</span><br>
+                <span>사과</span><br>
+                <span>시금치</span><br>
+                <span>해바라기유</span><br>
+                <span>연어오일</span><br>
+                <span>아마씨유</span><br>
+            </div>
         </div>
+        <p>1회 적정 제공량: {{ pet.2 }}kcal</p>
+
+        <div class="diagnosisResultBox container-fluid">
+            <div class="diagnosisResultTitle">
+                <p>{{ pet.0 }}에게 더 필요한 영양소</p>
+            </div>
+            <div class="diagnosisResult">
+                <button class="btn btn-default diagnosisCardButton">알아보기</button>
+            </div>
+        </div>
+
     </div>
     {% endfor %}
 </div>
 
-
+<!--<div>Icons made by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" 			    title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" 			    title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>-->
 
 {% endblock %}
 
@@ -65,10 +125,11 @@
 
 {% block script %}
 <script>
-    $(document).ready(function () {
-        var s = '이벤트 접수가 완료되었습니다.\n이메일을 통해 배송 및 유의사항을 안내해드리겠습니다!\n참여해주셔서 감사드립니다❤';
-        alert(s);
-        window.location="{% url 'diagnosis:main_lang' 'kor' %}";
-    })
+//    $(document).ready(function () {
+//        var s = '이벤트 접수가 완료되었습니다.\n이메일을 통해 배송 및 유의사항을 안내해드리겠습니다!\n참여해주셔서 감사드립니다❤';
+//        alert(s);
+//        window.location="{% url 'diagnosis:main_lang' 'kor' %}";
+//    })
+    $()
 </script>
 {% endblock %}
